Adicioanndo mais dados

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 
   <!-- MATERIAL ICONS AQUI gostei dessa informação -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com">
 
 </head>
 <body>
